--- a/src/executors/java_builder_docker.yml
+++ b/src/executors/java_builder_docker.yml
@@ -2,10 +2,11 @@ description: >
   Docker executor with JDK to build java applications.
 
 parameters:
-  java_version:
-    description: "Java version to install (or rather selecting an existing image accordingly)"
+  # NOTE: all java_builder_* have a shared set of parameters (signature) which allows mimicking polymorph behaviour
+  image:
+    description: "Docker image to use for the executor"
     type: string
-    default: "11.0"
+    default: "cimg/openjdk:11.0"
   docker_hub_username:
     description: "Docker hub credentials to download the executor image"
     type: string
@@ -16,7 +17,7 @@ parameters:
     default: $DOCKER_HUB_PASSWORD
 
 docker:
-  - image: "cimg/openjdk:<< parameters.java_version >>"
+  - image: << parameters.image >>
     auth:
       username: << parameters.docker_hub_username >>
       password: << parameters.docker_hub_password >>
