--- a/src/examples/java_singleapprepo.yml
+++ b/src/examples/java_singleapprepo.yml
@@ -35,7 +35,7 @@ usage:
             executor: java_builder_docker
             java_builder_image: "cimg/openjdk:11.0"
 #            executor: java_builder_vm
-#            java_builder_image: "ubuntu-2004:202010-01"
+#            java_builder_image: "ubuntu-2204:current"
             java_builder_docker_hub_username: $DOCKER_HUB_USERNAME
             java_builder_docker_hub_password: $DOCKER_HUB_PASSWORD
 
