--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -19,15 +19,6 @@ usage:
     ric-orb: ricardo/ric-orb@1.7.1
 
   parameters:
-    modified-cci:
-      type: boolean
-      default: false
-    modified-mvnw:
-      type: boolean
-      default: false
-    modified-pom:
-      type: boolean
-      default: false
     modified-common:
       type: boolean
       default: false
@@ -43,7 +34,7 @@ usage:
   cfg-isopod-version: &cfg-isopod-version
     isopod_version: "0.29.1"
   cfg-maven-cache-key-prefix: &cfg-maven-cache-key-prefix
-    maven_cache_key_prefix: incidents-api
+    maven_cache_key_prefix: my-repo
 
   workflows:
     version: 2
@@ -54,9 +45,6 @@ usage:
           - not: << pipeline.parameters.modified-app1 >>
           - not: << pipeline.parameters.modified-app2 >>
           - not: << pipeline.parameters.modified-common >>
-          - not: << pipeline.parameters.modified-pom >>
-          - not: << pipeline.parameters.modified-cci >>
-          - not: << pipeline.parameters.modified-mvnw >>
 
       jobs:
         - ric-orb/no_op
@@ -69,9 +57,6 @@ usage:
         or:
           - << pipeline.parameters.modified-app1 >>
           - << pipeline.parameters.modified-common >>
-          - << pipeline.parameters.modified-pom >>
-          - << pipeline.parameters.modified-cci >>
-          - << pipeline.parameters.modified-mvnw >>
 
       jobs:
         - ric-orb/java_maven_build_test:
@@ -82,7 +67,7 @@ usage:
             executor: java_builder_docker
             java_builder_image: "cimg/openjdk:11.0"
 #            executor: java_builder_vm
-#            java_builder_image: "ubuntu-2004:202010-01"
+#            java_builder_image: "ubuntu-2204:current"
             java_builder_docker_hub_username: $DOCKER_HUB_USERNAME
             java_builder_docker_hub_password: $DOCKER_HUB_PASSWORD
 
@@ -163,9 +148,6 @@ usage:
         or:
           - << pipeline.parameters.modified-app2 >>
           - << pipeline.parameters.modified-common >>
-          - << pipeline.parameters.modified-pom >>
-          - << pipeline.parameters.modified-cci >>
-          - << pipeline.parameters.modified-mvnw >>
 
       jobs:
         - ric-orb/java_maven_build_test:
@@ -176,7 +158,7 @@ usage:
 #            executor: java_builder_docker
 #            java_builder_image: "cimg/openjdk:11.0"
             executor: java_builder_vm
-            java_builder_image: "ubuntu-2004:202010-01"
+            java_builder_image: "ubuntu-2204:current"
             java_builder_docker_hub_username: $DOCKER_HUB_USERNAME
             java_builder_docker_hub_password: $DOCKER_HUB_PASSWORD
 
