--- a/src/commands/java_save_maven_output.yml
+++ b/src/commands/java_save_maven_output.yml
@@ -3,7 +3,7 @@ description: >
   Supports app-module from monorepo as well as single app from single-app-repo.
 
 parameters:
-  app_path:
+  path:
     description: "Path of maven module for the app, or \".\" for single-app-repo"
     type: string
     default: "."
@@ -12,4 +12,4 @@ steps:
   - persist_to_workspace:
       root: .
       paths:
-        - << parameters.app_path >>/target
+        - << parameters.path >>/target
