--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -62,7 +62,7 @@ usage:
         - ric-orb/java_maven_build_test:
             name: "maven-build"
             context: dev
-            app_path: "app1"
+            path: "app1"
             <<: *cfg-maven-cache-key-prefix
             executor: java_builder_docker
             java_builder_image: "cimg/openjdk:11.0"
@@ -83,7 +83,7 @@ usage:
         - ric-orb/java_isopod_build_push_image:
             name: "build-push-image-branch"
             context: dev
-            app_path: "app1"
+            path: "app1"
             <<: [ *cfg-docker-version, *cfg-isopod-version ]
             requires:
               - maven-build
@@ -98,7 +98,7 @@ usage:
         - ric-orb/java_isopod_deploy:
             name: "deploy-dev-branch"
             context: dev
-            app_path: "app1"
+            path: "app1"
             <<: *cfg-isopod-version
             to: "dev"
             requires:
@@ -108,7 +108,7 @@ usage:
         - ric-orb/java_isopod_build_push_image:
             name: "build-push-image-master"
             context: dev
-            app_path: "app1"
+            path: "app1"
             <<: [ *cfg-docker-version, *cfg-isopod-version ]
             filters:
               branches:
@@ -126,7 +126,7 @@ usage:
         - ric-orb/java_isopod_deploy:
             name: "deploy-dev-master"
             context: dev
-            app_path: "app1"
+            path: "app1"
             <<: *cfg-isopod-version
             to: "dev"
             requires:
@@ -134,7 +134,7 @@ usage:
         - ric-orb/java_isopod_deploy:
             name: "deploy-prod-branch"
             context: prod
-            app_path: "app1"
+            path: "app1"
             <<: *cfg-isopod-version
             to: "prod"
             requires:
@@ -153,7 +153,7 @@ usage:
         - ric-orb/java_maven_build_test:
             name: "maven-build"
             context: dev
-            app_path: "app2"
+            path: "app2"
             <<: *cfg-maven-cache-key-prefix
 #            executor: java_builder_docker
 #            java_builder_image: "cimg/openjdk:11.0"
@@ -174,7 +174,7 @@ usage:
         - ric-orb/java_isopod_build_push_image:
             name: "build-push-image-branch"
             context: dev
-            app_path: "app2"
+            path: "app2"
             <<: [ *cfg-docker-version, *cfg-isopod-version ]
             requires:
               - maven-build
@@ -189,7 +189,7 @@ usage:
         - ric-orb/java_isopod_deploy:
             name: "deploy-dev-branch"
             context: dev
-            app_path: "app2"
+            path: "app2"
             <<: *cfg-isopod-version
             to: "dev"
             requires:
@@ -199,7 +199,7 @@ usage:
         - ric-orb/java_isopod_build_push_image:
             name: "build-push-image-master"
             context: dev
-            app_path: "app2"
+            path: "app2"
             <<: [ *cfg-docker-version, *cfg-isopod-version ]
             filters:
               branches:
@@ -217,7 +217,7 @@ usage:
         - ric-orb/java_isopod_deploy:
             name: "deploy-dev-master"
             context: dev
-            app_path: "app2"
+            path: "app2"
             <<: *cfg-isopod-version
             to: "dev"
             requires:
@@ -225,7 +225,7 @@ usage:
         - ric-orb/java_isopod_deploy:
             name: "deploy-prod-branch"
             context: prod
-            app_path: "app2"
+            path: "app2"
             <<: *cfg-isopod-version
             to: "prod"
             requires:
