hardcode maven executor parameters to simplify setup

--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -64,12 +64,8 @@ usage:
             context: dev
             path: "app1"
             <<: *cfg-maven-cache-key-prefix
-            executor: java_builder_docker
-            java_builder_image: "cimg/openjdk:11.0"
-#            executor: java_builder_vm
-#            java_builder_image: "ubuntu-2204:current"
-            java_builder_docker_hub_username: $DOCKER_HUB_USERNAME
-            java_builder_docker_hub_password: $DOCKER_HUB_PASSWORD
+            executor: maven_docker
+#            executor: maven_vm
 
         # jobs for branch #####################################################
         - approve_deploy_dev_branch:
@@ -155,12 +151,8 @@ usage:
             context: dev
             path: "app2"
             <<: *cfg-maven-cache-key-prefix
-#            executor: java_builder_docker
-#            java_builder_image: "cimg/openjdk:11.0"
-            executor: java_builder_vm
-            java_builder_image: "ubuntu-2204:current"
-            java_builder_docker_hub_username: $DOCKER_HUB_USERNAME
-            java_builder_docker_hub_password: $DOCKER_HUB_PASSWORD
+#            executor: maven_docker
+            executor: maven_vm
 
         # jobs for branch #####################################################
         - approve_deploy_dev_branch:
