simplify parameter names

--- a/src/commands/java_cache_maven_artifacts.yml
+++ b/src/commands/java_cache_maven_artifacts.yml
@@ -3,7 +3,7 @@ description: >
   Works with monorepo as well as single-app-repo.
 
 parameters:
-  maven_cache_key_prefix:
+  prefix:
     description: "Prefix for the cache-key (used in combination with checksum of pom.xml)"
     type: string
 
@@ -11,4 +11,4 @@ steps:
   - save_cache:
       paths:
         - ~/.m2
-      key: << parameters.maven_cache_key_prefix >>-{{ checksum "pom.xml" }}
+      key: << parameters.prefix >>-{{ checksum "pom.xml" }}
