--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -33,8 +33,8 @@ usage:
     docker_version: "19.03.13"
   cfg-isopod-version: &cfg-isopod-version
     isopod_version: "0.29.1"
-  cfg-maven-cache-key-prefix: &cfg-maven-cache-key-prefix
-    maven_cache_key_prefix: my-repo
+  cfg-cache-key-prefix: &cfg-cache-key-prefix
+    cache_key_prefix: my-repo
 
   workflows:
     version: 2
@@ -63,7 +63,7 @@ usage:
             name: "maven-build"
             context: dev
             path: "app1"
-            <<: *cfg-maven-cache-key-prefix
+            <<: *cfg-cache-key-prefix
             executor: maven_docker
 #            executor: maven_vm
 
@@ -150,7 +150,7 @@ usage:
             name: "maven-build"
             context: dev
             path: "app2"
-            <<: *cfg-maven-cache-key-prefix
+            <<: *cfg-cache-key-prefix
 #            executor: maven_docker
             executor: maven_vm
 
