--- a/src/commands/java_restore_maven_artifacts.yml
+++ b/src/commands/java_restore_maven_artifacts.yml
@@ -3,16 +3,16 @@ description: >
   Works with monorepo as well as single-app-repo.
 
 parameters:
-  maven_cache_key_prefix:
+  prefix:
     description: "Prefix for the cache-key (used in combination with checksum of pom.xml); no-op with blank prefix"
     type: string
     default: ""
 
 steps:
   - when:
-      condition: << parameters.maven_cache_key_prefix >>
+      condition: << parameters.prefix >>
       steps:
         - restore_cache:
             keys:
-              - << parameters.maven_cache_key_prefix >>-{{ checksum "pom.xml" }}
-              - << parameters.maven_cache_key_prefix >>-
+              - << parameters.prefix >>-{{ checksum "pom.xml" }}
+              - << parameters.prefix >>-
