[semver:major] java orb (#17)
- adding jobs/commands/executors to simplify circleCI configuration for java

--- a/src/jobs/build_push_image.yml
+++ b/src/jobs/build_push_image.yml
@@ -1,40 +1,48 @@
 description: >
   This job builds and pushes Docker image to private Docker hub. It uses isopod for building and pushing.
   As dependencies can be pulled from Docker HUB authentication is needed for it as well.
+
 executor:
   name: isopod
   tag: <<parameters.isopod_version>>
   username: <<parameters.private_hub_username>>
   password: <<parameters.private_hub_password>>
+
 parameters:
+  path:
+    description: "Path to directory containing isopod.yml file"
+    type: string
+    default: "."
   isopod_version:
     type: string
     default: ${ISOPOD_VERSION}
   docker_hub_username:
     type: string
-    default: $DOCKER_HUB_USERNAME
+    default: ${DOCKER_HUB_USERNAME}
   docker_hub_password:
     type: string
-    default: $DOCKER_HUB_PASSWORD
+    default: ${DOCKER_HUB_PASSWORD}
   private_hub_username:
     type: string
-    default: $DOCKER_JFROG_USERNAME
+    default: ${DOCKER_JFROG_USERNAME}
   private_hub_password:
     type: string
-    default: $DOCKER_JFROG_PASSWORD
+    default: ${DOCKER_JFROG_PASSWORD}
   private_hub_url:
     type: string
-    default: $DOCKER_JFROG_REGISTRY_URL
+    default: ${DOCKER_JFROG_REGISTRY_URL}
   cache_name:
     type: string
     default: ""
   maven_credentials:
+    # NOTE that this is the context variable name, not the context variable itself (i.e. ARTIFACTORY_MAVEN_CREDENTIALS, not ${ARTIFACTORY_MAVEN_CREDENTIALS})
     type: string
     default: ARTIFACTORY_MAVEN_CREDENTIALS
   npm_credentials:
+    # NOTE that this is the context variable name, not the context variable itself (i.e. ARTIFACTORY_MAVEN_CREDENTIALS, not ${ARTIFACTORY_MAVEN_CREDENTIALS})
     type: string
     default: NPM_RC
-  docker_layer_cashing:
+  docker_layer_caching:
     type: boolean
     default: false
   docker_version:
@@ -50,31 +58,22 @@ parameters:
     default:
       - run:
           name: Build the Docker image
-          command: isopod build
+          command: isopod -f << parameters.path >>/isopod.yml build
   postbuild_steps:
     type: steps
     description: "Steps that will run after build"
     default: []
-  lang:
-    type: enum
-    enum: [ "java", "node", "go" ]
-    default: "go"
+
 steps:
   - checkout
-  - when:
-      condition:
-        equal: [ "java", << parameters.lang >> ]
-      steps:
-        - maven_auth:
-            maven_credentials: << parameters.maven_credentials >>
-  - when:
-      condition:
-        equal: [ "node", << parameters.lang >> ]
-      steps:
-        - npm_auth:
-            npm_credentials: << parameters.npm_credentials >>
+  # only really needed for maven/java, but less painful to just do it than to configure it in each java build config
+  - maven_auth:
+      maven_credentials: << parameters.maven_credentials >>
+  # only really needed for npm/node, but less painful to just do it than to configure it in each node build config
+  - npm_auth:
+      npm_credentials: << parameters.npm_credentials >>
   - setup_remote_docker:
-      docker_layer_caching: << parameters.docker_layer_cashing >>
+      docker_layer_caching: << parameters.docker_layer_caching >>
       version: << parameters.docker_version >>
   - login_docker_registry:
       username: <<parameters.docker_hub_username>>
