--- a/src/commands/maven_build_test.yml
+++ b/src/commands/maven_build_test.yml
@@ -4,9 +4,9 @@ description: >
 
 parameters:
   path:
-    description: "Path of maven module for the app, or \".\" for single-app-repo"
+    description: 'Path of maven module for the app, or "." for single-app-repo'
     type: string
-    default: "."
+    default: .
 
 steps:
   # build app (maven module) from monorepo
@@ -14,7 +14,7 @@ steps:
       condition:
         matches:
           # check whether contains word-characters
-          pattern: "^.*\\w.*$"
+          pattern: '^.*\w.*$'
           value: << parameters.path >>
       steps:
         - run: |
@@ -24,7 +24,7 @@ steps:
       condition:
         matches:
           # check whether contains word-characters
-          pattern: "^.*\\w.*$"
+          pattern: '^.*\w.*$'
           value: << parameters.path >>
       steps:
         - run: |
