--- a/src/executors/maven_docker.yml
+++ b/src/executors/maven_docker.yml
@@ -2,7 +2,7 @@ description: >
   Docker executor with JDK 11 to build java applications.
 
 docker:
-  - image: "cimg/openjdk:11.0"
+  - image: 'cimg/openjdk:11.0'
     auth:
       username: $DOCKER_HUB_USERNAME
       password: $DOCKER_HUB_PASSWORD
