--- a/src/jobs/build_push_image.yml
+++ b/src/jobs/build_push_image.yml
@@ -10,58 +10,57 @@ executor:
 
 parameters:
   path:
-    description: "Path to directory containing isopod.yml file"
+    description: 'Path to directory containing isopod.yml file'
     type: string
-    default: "."
+    default: .
   isopod_version:
     type: string
-    default: ${ISOPOD_VERSION}
+    default: $ISOPOD_VERSION
   docker_hub_username:
     type: string
-    default: ${DOCKER_HUB_USERNAME}
+    default: $DOCKER_HUB_USERNAME
   docker_hub_password:
     type: string
-    default: ${DOCKER_HUB_PASSWORD}
+    default: $DOCKER_HUB_PASSWORD
   private_hub_username:
     type: string
-    default: ${DOCKER_JFROG_USERNAME}
+    default: $DOCKER_JFROG_USERNAME
   private_hub_password:
     type: string
-    default: ${DOCKER_JFROG_PASSWORD}
+    default: $DOCKER_JFROG_PASSWORD
   private_hub_url:
     type: string
-    default: ${DOCKER_JFROG_REGISTRY_URL}
+    default: $DOCKER_JFROG_REGISTRY_URL
   cache_name:
     type: string
-    default: ""
+    default: ''
   maven_credentials:
     # NOTE that this is the context variable name, not the context variable itself (i.e. ARTIFACTORY_MAVEN_CREDENTIALS, not ${ARTIFACTORY_MAVEN_CREDENTIALS})
     type: string
-    default: ARTIFACTORY_MAVEN_CREDENTIALS
+    default: 'ARTIFACTORY_MAVEN_CREDENTIALS'
   npm_credentials:
     # NOTE that this is the context variable name, not the context variable itself (i.e. ARTIFACTORY_MAVEN_CREDENTIALS, not ${ARTIFACTORY_MAVEN_CREDENTIALS})
     type: string
-    default: NPM_RC
+    default: 'NPM_RC'
   docker_layer_caching:
     type: boolean
     default: false
   docker_version:
     type: string
-    default: "19.03.13"
+    default: '19.03.13'
   prebuild_steps:
+    description: 'Steps that will run before build'
     type: steps
-    description: "Steps that will run before build"
     default: []
   build_steps:
     type: steps
-    description: "Steps that will run quality checks"
+    description: 'Steps that will run quality checks'
     default:
-      - run:
-          name: Build the Docker image
-          command: isopod -f << parameters.path >>/isopod.yml build
+      - build_push:
+          path: << parameters.path >>
   postbuild_steps:
     type: steps
-    description: "Steps that will run after build"
+    description: 'Steps that will run after build'
     default: []
 
 steps:
