fixing bug from @2.0

--- a/src/jobs/build_push_image.yml
+++ b/src/jobs/build_push_image.yml
@@ -89,7 +89,9 @@ steps:
       at: .
   - steps: << parameters.prebuild_steps >>
   - unless:
-      condition: << parameters.build_steps >>
+      condition:
+        # no build steps passed
+        equals: [<< parameters.build_steps >>, []]
       steps:
         - build_push:
             path: << parameters.path >>
